2005-02-14 22:31  Dan McMahill <danmc>

	* src/: gtkextra-marshal.c, gtkitementry_1_2.c, listsort.c: add
	  some missing config.h inclusions

2005-02-14 22:27  Dan McMahill <danmc>

	* src/x_dialog.c: - move the config.h inclusion higher up so the
	  protected inclusion of string.h doesn't fail.

	  - fix a format string/# of arguments mismatch in a warning
	  string.

2005-02-13 11:30  Stuart Brorson <sdb@cloud9.net>

	* src/s_table.c: Fixed syntax bug (doubled ;;) in 
	s_table_add_toplevel_pin_items_to_pin_table.
	
2005-02-13 01:40  Dan McMahill <danmc>

	* src/s_string_list.c: fix 2 places where a pointer to an int was
	  being cast to an int and used as an int when we really wanted to
	  dereference the pointer instead.

2005-02-12  Stuart Brorson <sdb@cloud9.net>

	* src/gattrib.c, src/i_vars.c, src/s_toplevel.c, src/x_dialog.c,
	* src/x_fileselect.c:  Fixed program to compile and run after 
	Patrick's refactoring of libgeda.  Also made fileselect
	dialog stay on top of main window when gattrib is invoked with
	no args on cmd line.
	
2005-02-12  Carlos Nieves Onega <cnieves@iespana.es>

	* src/x_dialog.c, src/x_fileselect.c: Beautify buttons (use GTK stock).
	
2005-02-08 12:33  Dan McMahill <danmc>

	* include/prototype.h, src/g_rc.c, src/g_register.c, src/gattrib.c:
	  get rid of deprecated guile gh_* functions and replace them with
	  the currently (guile-1.6) supported interface.

2005-02-04  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/gattrib.c, src/s_attrib.c, src/s_object.c:
	* src/s_sheet_data.c, src/s_string_list.c, src/s_table.c:
	* src/s_toplevel.c, src/x_dialog.c, src/x_fileselect.c:
	* src/x_gtksheet.c, src/x_window.c: Replaced u_basic_strdup() and 
	u_basic_strdup_multiple() by GLib functions.
	
	* src/gattrib.c, src/x_fileselect.c:  Made it use GLib's 
	G_DIR_SEPARATOR* instead of libgeda's *_SEPARATER_*.

2005-01-27 Stuart Brorson   <sdb@cloud9.net>

	* src/gattrib.c: Changes made to enable correct opening